--- a/tournaments/css/tournament.css
+++ b/tournaments/css/tournament.css
@@ -1,4 +1,12 @@
-.container {
+.tournament-header .page-title {
+    margin-bottom: 0;
+    color: var(--primary-color);
+}.page-title {
+    text-align: left;
+    margin-bottom: 30px;
+    font-size: 2.5em;
+    color: var(--primary-color);
+}.container {
     max-width: 900px;
     padding: 0 15px;
     margin: 0 auto;
@@ -6,14 +14,7 @@
 }/* Стили для страницы отдельного турнира */
 
 .tournament-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 2rem;
-    background-color: #f5f5f5;
-    padding: 1.5rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .tournament-header .page-title {
@@ -74,7 +75,7 @@
 .tournament-stats-grid {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1.5rem;
+    gap: 2rem;
     margin-bottom: 2rem;
     width: 100%;
     box-sizing: border-box;
@@ -163,7 +164,7 @@
 }
 
 .answer-type .label {
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: 500;
 }
 
